<resources>
    <string name="app_name">Memento</string>
    <string name="nav_home">Mementos</string>
    <string name="nav_categories">Kategorie</string>
    <string name="nav_settings">Ustawienia</string>
    <string name="nav_calendar">Kalendarz</string>
    <string name="tab_all">Wszystkie</string>
    <string name="tab_today">Dzis</string>
    <string name="tab_upcoming">Nadchodzace</string>
    <string name="tab_completed">Ukonczone</string>
    <string name="empty_mementos">Brak mementow.\nDotknij + aby dodac.</string>
    <string name="empty_categories">Brak kategorii.\nDotknij + aby dodac.</string>
    <string name="empty_day">Brak mementow na ten dzien.</string>
    <string name="new_memento">Nowe Memento</string>
    <string name="edit_memento">Edytuj Memento</string>
    <string name="hint_title">Tytul *</string>
    <string name="hint_description">Opis (opcjonalnie)</string>
    <string name="pick_date_time">Ustaw date i czas</string>
    <string name="clear_date">Wyczysc date</string>
    <string name="label_color">Kolor karty</string>
    <string name="label_priority">Priorytet</string>
    <string name="label_category">Kategoria</string>
    <string name="label_reminder">Typ przypomnienia</string>
    <string name="label_repeat">Powtarzanie</string>
    <string name="label_frequency">Ile razy dziennie</string>
    <string name="label_frequency_unit">razy / dzien</string>
    <string name="label_sound">Dzwiek</string>
    <string name="label_vibration">Wibracje</string>
    <string name="save">Zapisz</string>
    <string name="title_required">Tytul jest wymagany</string>
    <string name="no_category">Brak kategorii</string>
    <string name="priority_low">Niski</string>
    <string name="priority_medium">Sredni</string>
    <string name="priority_high">Wysoki</string>
    <string name="priority_urgent">Pilny</string>
    <string name="reminder_none">Brak</string>
    <string name="reminder_notification">Powiadomienie</string>
    <string name="reminder_alarm">Alarm</string>
    <string name="repeat_none">Nie</string>
    <string name="repeat_daily">Codziennie</string>
    <string name="repeat_weekly">Co tydzien</string>
    <string name="repeat_monthly">Co miesiac</string>
    <string name="add_category">Dodaj kategorie</string>
    <string name="edit_category">Edytuj kategorie</string>
    <string name="delete_category">Usun kategorie</string>
    <string name="delete_category_confirm">Usunac kategorie "%s"?</string>
    <string name="hint_category_name">Nazwa kategorii</string>
    <string name="label_color_select">Wybierz kolor</string>
    <string name="delete">Usun</string>
    <string name="cancel">Anuluj</string>
    <string name="delete_memento">Usun memento</string>
    <string name="delete_memento_confirm">Usunac "%s"?</string>
    <string name="channel_reminders_name">Przypomnienia</string>
    <string name="channel_reminders_desc">Powiadomienia o nadchodzacych mementach</string>
    <string name="channel_alarms_name">Alarmy</string>
    <string name="channel_alarms_desc">Alarmowe przypomnienia o mementach</string>
    <string name="reminder_tap_to_open">Dotknij, aby otworzyc</string>
    <string name="settings_title">Ustawienia</string>
    <string name="pref_theme_title">Motyw kolorystyczny</string>
    <string name="pref_theme_summary">Wybierz pastelowy motyw aplikacji</string>
    <string name="pref_sound_title">Dzwiek powiadomien</string>
    <string name="pref_vibration_title">Wibracje</string>
    <string name="search_hint">Szukaj mementow...</string>
    <string name="sort_by">Sortuj wedlug</string>
    <string name="sort_date_asc">Daty (rosnaco)</string>
    <string name="sort_date_desc">Daty (malejaco)</string>
    <string name="sort_priority">Priorytetu</string>
    <string name="sort_title">Tytulu</string>
    <string name="sort_created">Daty dodania</string>
    <string name="mementos_in_category">Mementos w kategorii</string>
    <string name="no_mementos_in_category">Brak mementow w tej kategorii.</string>
</resources>

