<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment"
        android:name="com.pawel.memento.ui.home.HomeFragment"
        android:label="@string/nav_home">
        <action android:id="@+id/action_homeFragment_to_mementoEditorFragment"
            app:destination="@id/mementoEditorFragment" />
    </fragment>

    <fragment android:id="@+id/mementoEditorFragment"
        android:name="com.pawel.memento.ui.editor.MementoEditorFragment"
        android:label="@string/new_memento">
        <argument android:name="mementoId" app:argType="long" android:defaultValue="0" />
    </fragment>

    <fragment android:id="@+id/categoriesFragment"
        android:name="com.pawel.memento.ui.categories.CategoriesFragment"
        android:label="@string/nav_categories">
        <action android:id="@+id/action_categoriesFragment_to_categoryDetailFragment"
            app:destination="@id/categoryDetailFragment" />
    </fragment>

    <fragment android:id="@+id/categoryDetailFragment"
        android:name="com.pawel.memento.ui.categories.CategoryDetailFragment"
        android:label="@string/nav_categories">
        <argument android:name="categoryId" app:argType="long" android:defaultValue="0" />
        <argument android:name="categoryName" app:argType="string" android:defaultValue="" />
        <action android:id="@+id/action_categoryDetailFragment_to_mementoEditorFragment"
            app:destination="@id/mementoEditorFragment" />
    </fragment>

    <fragment android:id="@+id/calendarFragment"
        android:name="com.pawel.memento.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar" />

    <fragment android:id="@+id/settingsFragment"
        android:name="com.pawel.memento.ui.settings.SettingsFragment"
        android:label="@string/nav_settings" />
</navigation>
